Remove usages of Commons Lang